--- a/adoteja/templates/partials/navbar.html
+++ b/adoteja/templates/partials/navbar.html
@@ -24,10 +24,10 @@
                 <!-- Itens centralizados -->
                 <ul class="navbar-nav mx-auto gap-2">
                     <li class="nav-item">
-                        <a class="nav-link" href="">Home</a>
+                        <a class="nav-link" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">Nossos Pets</a>
+                        <a class="nav-link" href="{% url 'home_pets' %}">Nossos Pets</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">Sobre</a>
