--- a/adoteja/pets/templates/adicionar_cachorro.html
+++ b/adoteja/pets/templates/adicionar_cachorro.html
@@ -13,6 +13,6 @@
         <button type="submit">Salvar</button>
     </form>
     <br>
-    <a href="{% url 'home' %}">Voltar</a>
+    <a href="{% url 'home_pets' %}">Voltar</a>
 </body>
 </html>
