--- a/adoteja/pets/templates/home.html
+++ b/adoteja/pets/templates/home.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AdoteJa - Adoção de Cachorros</title>
     <link rel="stylesheet" href="{% static 'pets/css/home.css' %}">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
+    />
 </head>
 <body>
     {% include 'partials/navbar.html' %}
@@ -26,15 +36,17 @@
         {% for cachorro in cachorros %}
 
 
-
+            <a href=""></a>
             <div class="cachorro">
                 <img src="{{ cachorro.imagem.url }}" alt="{{ cachorro.nome }}">
-                <h2>{{ cachorro.nome }}</h2>
-                <div class="tags">
-                    <div class="tag">{{ cachorro.status }}</div>
-                    <div class="tag" id="sexo">{{ cachorro.sexo }}</div>
+                <div class="cachorro-infos">
+                    <h2>{{ cachorro.nome }}</h2>
+                    <div class="tags">
+                        <div class="tag"><i class="ph ph-check-circle" style="color: rgb(255, 255, 255)"></i>{{ cachorro.status }}</div>
+                        <div class="tag" id="sexo"><i class="ph ph-gender-intersex" style="color: rgb(255, 255, 255)"></i>{{ cachorro.sexo }}</div>
+                    </div>
                 </div>
-                <p class="raca">Raça: {{ cachorro.raca }}</p>
+                <p class="raca">Raça<br><p>{{ cachorro.raca }}</p></p>
                 <!-- <p class="idade">Idade: {{ cachorro.idade }}</p> -->
                 <!-- <p class="sexo">Sexo: {{ cachorro.sexo }}</p> -->
                 <!-- <p>{{ cachorro.descricao }}</p> -->
