--- a/adoteja/pets/static/pets/css/home.css
+++ b/adoteja/pets/static/pets/css/home.css
@@ -103,8 +103,22 @@ body {
     background: linear-gradient(90deg, #0048ff, #0099ff);
 }
 
-#raca {
-    font-weight: 700;
+.end-infos{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
+.end-infos h4 {
+    font-weight: 600;
+    font-size: 18px;
+    margin: 0;
+}
+
+.end-infos p {
+    font-size: 20px;
+    margin: 0;
 }
 
 img {
