adicionando mais uma section na home_page e ajustando css

--- a/adoteja/templates/home_page.html
+++ b/adoteja/templates/home_page.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AdoteJa</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
+    />
 </head>
 <body>
     {% include 'partials/navbar.html' %}
@@ -27,6 +37,29 @@
             </div>
             <div class="image-container">
                 <img src="{% static 'img/ilustration.png' %}" alt="Cachorro olhando para tela">
+            </div>
+        </div>
+    </div>
+    <div class="site-informations">
+        <div class="info-head">
+            <h1>Sobre nós</h1>
+            <h2>Descubra o porque você deve adotar um novo cachorro</h2>
+        </div>
+        <div class="info-cards">
+            <div class="info-card">
+                <i class="ph ph-dog" style="color: #0088FF"></i>
+                <h1>Eles realmente amam você</h1>
+                <h3>Estudos comprovam que os cachorros podem amar os humanos mais do que os próprios humanos entre sí.</h3>
+            </div>
+            <div class="info-card">
+                <i class="ph ph-dog" style="color: #0088FF"></i>
+                <h1>Eles realmente amam você</h1>
+                <h3>Estudos comprovam que os cachorros podem amar os humanos mais do que os próprios humanos entre sí.</h3>
+            </div>
+            <div class="info-card">
+                <i class="ph ph-dog" style="color: #0088FF"></i>
+                <h1>Eles realmente amam você</h1>
+                <h3>Estudos comprovam que os cachorros podem amar os humanos mais do que os próprios humanos entre sí.</h3>
             </div>
         </div>
     </div>
