--- a/adoteja/static/css/style.css
+++ b/adoteja/static/css/style.css
@@ -84,3 +84,92 @@ body {
     max-width: 100%;
     height: auto;
 }
+
+.site-informations {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background: white;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 70px;
+    margin-bottom: 100px;
+}
+
+.info-head {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: fit-content;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.info-head h1 {
+    color: #0088FF;
+    font-size: 66px;
+    text-align: center;
+    margin: 0;
+    width: 100%;
+    max-width: fit-content;
+    font-family: "Lilita One", sans-serif;
+}
+
+.info-head h2 {
+    text-align: center;
+    margin: 0;
+    width: 100%;
+    max-width: fit-content;
+    font-weight: 400;
+    font-size: 22px;
+    color: #000000a9;
+    max-width: 70%;
+}
+
+.info-cards {
+    grid: 0 0 3;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+
+.info-cards .info-card {
+    background-color: rgba(0, 0, 0, 0.04);
+    display: flex;
+    flex-direction: column;
+    border-radius: 24px;
+    padding: 18px;
+    width: 100%;
+    max-width: 400px;
+    gap: 14px;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-card .ph {
+    font-size: 45px;
+}
+
+.info-card h1 {
+    margin: 0;
+    width: 100%;
+    max-width: fit-content;
+    font-size: 24px;
+    text-align: center;
+}
+
+.info-card h3 {
+    text-align: center;
+    margin: 0;
+    width: 100%;
+    max-width: fit-content;
+    font-size: 18px;
+    font-weight: 400;
+    color: #000000a9;
+}
