--- a/adoteja/templates/home_page.html
+++ b/adoteja/templates/home_page.html
@@ -33,7 +33,7 @@
             <div class="headline">
                 <h1>Encontre seu novo melhor amigo</h1>
                 <h3>O lugar certo para encontrar um companheiro leal para você</h3>
-                <button><a href="">Adotar Agora</a></button>
+                <button><a href="{% url 'home_pets' %}">Adotar Agora</a></button>
             </div>
             <div class="image-container">
                 <img src="{% static 'img/ilustration.png' %}" alt="Cachorro olhando para tela">
