--- a/adoteja/templates/partials/navbar.html
+++ b/adoteja/templates/partials/navbar.html
@@ -1,54 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AdoteJá</title>
     <!-- <title>{% block title %}AdoteJá{% endblock %}</title> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
+    />
+  </head>
+  <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white border-bottom">
-        <div class="container">
-            <!-- Logo -->
-            <a class="navbar-brand text-dark fw-bold" href="{% url 'home' %}">AdoteJá</a>
+      <div class="container">
+        <!-- Logo -->
+        <a class="navbar-brand text-dark fw-bold" href="{% url 'home' %}"
+          >AdoteJá</a
+        >
 
-            <!-- Botão do menu em mobile -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <!-- Botão do menu em mobile -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <!-- Menu -->
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <!-- Itens centralizados -->
-                <ul class="navbar-nav mx-auto gap-2">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home_pets' %}">Nossos Pets</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Sobre</a>
-                        <!-- <a class="nav-link text-dark" href="{% url 'admin:index' %}">Sobre</a> -->
-                    </li>
-                </ul>
+        <!-- Menu -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <!-- Itens centralizados -->
+          <ul class="navbar-nav mx-auto gap-2">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'home_pets' %}">Nossos Pets</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Sobre</a>
+              <!-- <a class="nav-link text-dark" href="{% url 'admin:index' %}">Sobre</a> -->
+            </li>
+          </ul>
 
-                <!-- Botões no canto direito -->
-                <div class="d-flex gap-2">
-                    {% if user.is_authenticated %}
-                        <span class="navbar-text me-2">Olá, {{ user.username }}!</span>
-                        <a href="{% url 'logout' %}" class="btn btn-outline-primary">Sair</a>
-                    {% else %}
-                        <a href="{% url 'login' %}" class="btn btn-outline-primary">Login</a>
-                        <a href="{% url 'register' %}" class="btn btn-primary">Cadastro</a>
-                    {% endif %}
-                </div>
-            </div>
+          <!-- Botões no canto direito -->
+          <div class="d-flex gap-2">
+            {% if user.is_authenticated %}
+            <span class="navbar-text me-2">Olá, {{user.username }}!</span>
+            <a href="{% url 'user_profile' %}" class="btn btn-outline-primary"
+              ><i class="ph ph-user" style="color: #0088ff"></i
+            ></a>
+            <a href="{% url 'logout' %}" class="btn btn-outline-primary"
+              >Sair</a
+            >
+            {% else %}
+            <a href="{% url 'login' %}" class="btn btn-outline-primary"
+              >Login</a
+            >
+            <a href="{% url 'register' %}" class="btn btn-primary">Cadastro</a>
+            {% endif %}
+          </div>
         </div>
+      </div>
     </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
