montando a parte das informações do usuario (formulario) 22/04 - 12:09h

--- a/adoteja/pets/static/pets/css/home.css
+++ b/adoteja/pets/static/pets/css/home.css
@@ -59,6 +59,11 @@ body {
     max-width: fit-content;
     flex-direction: column;
     gap: 12px;
+    transition: transform .3s ease;
+}
+
+.cachorro:hover {
+    transform: scale(1.03);
 }
 
 .cachorro-infos {
