--- a/adoteja/users/templates/users/profile.html
+++ b/adoteja/users/templates/users/profile.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adoteja - Meu perfil</title>
-    <link rel="stylesheet" href="{% static 'users/css/profile.css' %}" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -49,7 +48,10 @@
           </div>
           <div class="line"></div>
           <div class="profile-infos">
-  
+            <div class="formulario-dados">
+              <p>fazer os forms aqui</p>
+              <!-- CONTINUE FAZENDO AQUI -->
+            </div>
           </div>
         </div>
       </div>
