--- a/adoteja/static/css/style.css
+++ b/adoteja/static/css/style.css
@@ -51,7 +51,7 @@ body {
         letter-spacing: -0.03rem;
     }
 
-    & button {
+    & .btn-adotar {
         text-decoration: none;
         padding: 12px 32px;
         font-size: 20px;
@@ -59,12 +59,10 @@ body {
         border: none;
         border-radius: 100px;
         width: fit-content;
+        text-decoration: none;
+        font-weight: 500;
+        color: white;
 
-        & a {
-            text-decoration: none;
-            font-weight: 500;
-            color: white;
-        }
     }
 }
 
@@ -88,7 +86,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 800px;
+    max-width: 1000px;
     margin: 20px auto;
     padding: 20px;
     background: white;
@@ -139,16 +137,18 @@ body {
 }
 
 .info-cards .info-card {
-    background-color: rgba(0, 0, 0, 0.04);
+    background-color: rgba(0, 0, 0, 0);
     display: flex;
+    border: 1px solid #0000001a;
     flex-direction: column;
     border-radius: 24px;
-    padding: 18px;
+    padding: 32px 18px;
     width: 100%;
     max-width: 400px;
     gap: 14px;
     justify-content: center;
     align-items: center;
+    height: 260px;
 }
 
 .info-card .ph {
@@ -159,8 +159,9 @@ body {
     margin: 0;
     width: 100%;
     max-width: fit-content;
-    font-size: 24px;
+    font-size: 22px;
     text-align: center;
+    font-weight: 600;
 }
 
 .info-card h3 {
@@ -168,7 +169,7 @@ body {
     margin: 0;
     width: 100%;
     max-width: fit-content;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 400;
     color: #000000a9;
 }
