feito o front do registro

--- a/adoteja/users/templates/users/register.html
+++ b/adoteja/users/templates/users/register.html
@@ -1,17 +1,36 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <title>Document</title> -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
+    />
+    <link rel="stylesheet" href="{% static 'users/css/register.css' %}" />
 </head>
 <body>
-    <h2>Cadastro</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Registrar</button>
-    </form>
-    <p>Já tem conta? <a href="{% url 'login' %}">Entrar</a></p>
+    <div class="cadastro-container">
+        <div class="cadastro-section">
+            <div class="cadastro-header">
+                <h2>Cadastre-se</h2>
+                <h3>Faça seu cadastro para continuar utilizando o AdoteJa.</h3>
+            </div>
+            <div class="line-div"></div>
+            <form method="post" class="form-cadastro">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn-registrar">Registrar</button>
+            </form>
+            <p>Já tem conta? <a href="{% url 'login' %}" class="login-link">Entrar</a></p>
+        </div>
+    </div>
 </body>
 </html>
